[package]
name = "ROTP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bardecoder = "0.5.0"
data-encoding = "2.5.0"
err-derive = "0.3.1"
image = "0.24.9"
ring = "0.17.8"
snafu = "0.8.2"
url = "2.5.0"

