[package]
name = "ROTP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.10.0"
anyhow = "1.0.81"
bardecoder = "0.5.0"
data-encoding = "2.5.0"
err-derive = "0.3.1"
image = "0.25.1"
inquire = "0.7.4"
ring = "0.17.8"
rpassword = "7.3.1"
snafu = "0.8.2"
tar = "0.4.40"
url = "2.5.0"

